--- a/selectors.css
+++ b/selectors.css
@@ -2,8 +2,8 @@
 1 +
 2 +
 3 +
-4 x
-5 x
+4 +
+5 +
 6 +
 7 +
 8 +
@@ -11,7 +11,7 @@
 10 +
 11 +
 12 +
-13 x
+13 +
 14 x
 **//
 
@@ -21,23 +21,26 @@ header {
     border-width: 1px;
 }
 
-.month-list li {
+header ul li {
     list-style: none;
     float; left;
-    display: inline;
+    display: inline-block;
     margin: 20px 30px;
+    border: solid;
+    border-color: pink;
+    border-width: 1px;
 }
 
 .month-list {
-    font: purple;
+    color: purple;
 }
 
 .disabled {
-    font: grey;
+    color: grey;
 }
 
 .active {
-    font: yellow;
+    color: yellow;
 }
 
 
@@ -62,10 +65,6 @@ header {
     border-color: black;
 }
 
-a {
-    text-decoration: none;
-    color: inherit;
-}
 
 .grandparent div div div {
     color: red;
@@ -73,4 +72,13 @@ a {
 
 .grandparent div div .blue {
     color: blue;
+}
+
+.promo {
+    color: gold;
+    font-weight: bold;
+}
+
+input {
+    height: 25px;
 }
